--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
 </head>
 <header>
   <% if logged_in? %>
+    <%= current_user.username %>
     <%= button_to "Log Out", session_url(current_user), method: :delete %>
   <% else %>
+    <%= button_to "Sign Up", new_user_url, method: :get %>
     <%= button_to "Log In", new_session_url, method: :get %>
   <% end %>
 </header>
