--- a/app/views/subs/_form.html.erb
+++ b/app/views/subs/_form.html.erb
@@ -7,12 +7,12 @@
   value="<%=form_authenticity_token%>">
 
 <label>Title
-  <input type="text" name="sub[title]">
+  <input type="text" name="sub[title]" value="<%= sub.title %>">
 </label>
 <br>
 
 <label>Description
-  <textarea name="sub[description]"></textarea>
+  <textarea name="sub[description]"><%= sub.description %></textarea>
 </label>
 <br>
 
